@@ -1,6 +1,14 @@
 Change History
 ==============
 
+2011-03-29
+----------
+
+- Use sets to avoid duplicate action adapters in form.py. Fixes
+  http://plone.org/products/ploneformgen/issues/263
+  [tkimnguyen]
+
+
 1.7a2 2011-03-26
 ----------------
 
